# cool_proxy

./: .gitignore  README.md
backend/: Cargo.toml  config.example.yaml
backend/src/: config.rs  main.rs  state.rs
backend/src/api/: accounts.rs  auth.rs  kiro_accounts.rs  logs.rs  mod.rs  proxies.rs  stats.rs  usage.rs
backend/src/auth/: codex.rs  kiro.rs  kiro_quota.rs  kiro_refresh.rs  mod.rs  quota.rs  refresher.rs
backend/src/pool/: kiro.rs  mod.rs
backend/src/proxy/: clients.rs  error_class.rs  log.rs  mod.rs  models_catalog.rs
backend/src/proxy/assets/: codex_plan_models.json
backend/src/proxy/translator/: mod.rs  request.rs  response_aggregate.rs  response_stream.rs  tests.rs  tool_names.rs
backend/src/proxy/translator/fixtures/: req_multimodal.expected.json  req_multimodal.in.json  req_response_format.expected.json  req_response_format.in.json  req_simple_text.expected.json  req_simple_text.in.json  req_with_tools.expected.json  req_with_tools.in.json  resp_image_stream.events.jsonl  resp_text_stream.events.jsonl  resp_tool_call_stream.events.jsonl
backend/src/proxy_pool/: mod.rs
backend/src/store/: accounts.rs  kiro_accounts.rs  mod.rs  proxies.rs  requests.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/router/: index.ts
frontend/src/views/: Accounts.vue  KiroAccounts.vue  Layout.vue  Login.vue  Logs.vue  Proxies.vue  Settings.vue  Usage.vue
