[package]
name = "cool_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "http2"] }
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

dirs = "5"
walkdir = "2"
async-trait = "0.1"

# admin token / api key 校验
subtle = "2"

# JWT 解析（解析 id_token claims）
jsonwebtoken = "9"

# SQLite，bundled 自带 sqlite3 源码，Linux 上不依赖系统 libsqlite
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
